--- a/style.css
+++ b/style.css
@@ -285,3 +285,27 @@ nav div a {
     padding: 1.3vw 2vw;
     margin-top: 3vh;
 }
+
+.blue-banner {
+    aspect-ratio: 4/2;
+    background-image: url(img/banner_3.jpg);
+    background-position: center;
+    background-size: cover;
+   
+}
+
+.overlay {
+    position: relative;
+}
+
+.overlay::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #111c4e;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+}
